Adding two languages option

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -51,10 +51,32 @@ header {
 }
 
 /* SCROLL DOWN */
-.scroll__down {
+.rightside__bar {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
   position: absolute;
   right: -2.3rem;
   bottom: 5rem;
+}
+
+.languages {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9rem;
+}
+
+.languages p {
+  cursor: pointer;
+  color: var(--color-primary);
+  transition: var(--transition);
+}
+
+.languages p:hover {
+  color: var(--color-white);
+}
+
+.scroll__down {
   transform: rotate(90deg);
   font-size: 0.9rem;
 }
@@ -73,7 +95,8 @@ header {
   }
 
   .header__socials,
-  .scroll__down {
+  .scroll__down,
+  .rightside__bar {
     display: none;
   }
 }
