small adjustment on button alignment

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -101,7 +101,12 @@
     gap: 1rem;
   }
 
+  .about__content {
+    text-align: center;
+  }
+
   .about__content p {
     margin: 1.5rem 0;
+    text-align: left;
   }
 }
